--- a/firmware/Debug/makefile
+++ b/firmware/Debug/makefile
@@ -26,24 +26,24 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-eBTW2.elf \
+eBTW.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-eBTW2.list \
+eBTW.list \
 
 OBJCOPY_BIN += \
-eBTW2.bin \
+eBTW.bin \
 
 
 # All Target
-all: eBTW2.elf secondary-outputs
+all: eBTW.elf secondary-outputs
 
 # Tool invocations
-eBTW2.elf: $(OBJS) $(USER_OBJS) C:\Users\Esteves\Desktop\eBTW\firmware\STM32F103C8TX_FLASH.ld
-	arm-none-eabi-gcc -o "eBTW2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Esteves\Desktop\eBTW\firmware\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="eBTW2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+eBTW.elf: $(OBJS) $(USER_OBJS) C:\Users\Esteves\Documents\GitHub\e-BTW\firmware\STM32F103C8TX_FLASH.ld
+	arm-none-eabi-gcc -o "eBTW.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Esteves\Documents\GitHub\e-BTW\firmware\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="eBTW.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -52,13 +52,13 @@ default.size.stdout: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-eBTW2.list: $(EXECUTABLES)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "eBTW2.list"
+eBTW.list: $(EXECUTABLES)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "eBTW.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-eBTW2.bin: $(EXECUTABLES)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "eBTW2.bin"
+eBTW.bin: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "eBTW.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
