--- a/firmware/Debug/makefile
+++ b/firmware/Debug/makefile
@@ -26,24 +26,21 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-eBTW.elf \
+eBTW2.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-eBTW.list \
-
-OBJCOPY_BIN += \
-eBTW.bin \
+eBTW2.list \
 
 
 # All Target
-all: eBTW.elf secondary-outputs
+all: eBTW2.elf secondary-outputs
 
 # Tool invocations
-eBTW.elf: $(OBJS) $(USER_OBJS) C:\Users\Esteves\Documents\GitHub\e-BTW\firmware\STM32F103C8TX_FLASH.ld
-	arm-none-eabi-gcc -o "eBTW.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Esteves\Documents\GitHub\e-BTW\firmware\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="eBTW.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+eBTW2.elf: $(OBJS) $(USER_OBJS) C:\Users\lucas\STM32CubeIDE\workspace_1.0.2\eBTW2\STM32F103C8TX_FLASH.ld
+	arm-none-eabi-gcc -o "eBTW2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\lucas\STM32CubeIDE\workspace_1.0.2\eBTW2\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="eBTW2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -52,13 +49,8 @@ default.size.stdout: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-eBTW.list: $(EXECUTABLES)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "eBTW.list"
-	@echo 'Finished building: $@'
-	@echo ' '
-
-eBTW.bin: $(EXECUTABLES)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "eBTW.bin"
+eBTW2.list: $(EXECUTABLES)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "eBTW2.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
@@ -67,7 +59,7 @@ clean:
 	-$(RM) *
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
 
 .PHONY: all clean dependents
 .SECONDARY:
